--- a/ka/index.html
+++ b/ka/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <link rel="stylesheet" href="css/application-7218155b.css" data-turbo-track="reload">
+    <link rel="stylesheet" href="css/application-7300f215.css" data-turbo-track="reload">
 <link rel="stylesheet" href="css/tailwind-b8592a05.css" data-turbo-track="reload">
     
 
@@ -126,7 +126,7 @@
 
   <div class="flex items-center w-full">
     <h1 class="text-2xl md:text-[1.75rem] font-normal mb-0 text-[#6b8e6b] tracking-tight leading-tight">
-      <a class="hover:underline text-[#6b8e6b]" href="http://localhost:3000/ka/index.html">KBeautyGeo</a>
+      <a class="hover:underline text-[#6b8e6b]" href="index.html">KBeautyGeo</a>
     </h1>
     <!-- Hamburger only on mobile (CSS-only) -->
     <div class="mobile-menu-wrapper md:hidden ml-auto relative flex items-center">
@@ -143,16 +143,29 @@
         <button type="button" class="absolute top-3 right-3 text-gray-400 hover:text-[#6b8e6b] text-2xl leading-none" aria-label="Закрыть" style="background:none;border:none;cursor:pointer;padding:0;" onclick="document.getElementById('menu-toggle').checked=false">×</button>
         <h2 class="text-lg font-semibold text-[#6b8e6b] mb-4">Mobile Navigation Menu</h2>
           <div class="mb-4">
-            <div class="text-xs font-bold text-gray-500 mb-2">კატეგორიები</div>
+            <a href="categories.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">კატეგორიები</a>
             <ul>
-                <li class="mb-2"><a href="#" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 ჰიდროფილური ზეთები &amp; ბალმები</a></li>
-                <li class="mb-2"><a href="#" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 მზისგან დამცავები</a></li>
+                <li class="mb-2"><a href="categories/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 ჰიდროფილური ზეთები &amp; ბალმები</a></li>
+                <li class="mb-2"><a href="categories/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 მზისგან დამცავები</a></li>
             </ul>
           </div>
-          <div>
-            <div class="text-xs font-bold text-gray-500 mb-2">ბრენდები</div>
+          <div class="mb-4">
+            <a href="brands.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ბრენდები</a>
             <ul>
-                <li class="mb-2"><a href="#" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">ბრენდი</a></li>
+                <li class="mb-2"><a href="brands/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">ბრენდი</a></li>
+            </ul>
+          </div>
+          <div class="mb-4">
+            <a href="ingredients.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ინგრედიენტები</a>
+            <ul>
+                <li class="mb-2"><a href="ingredients/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">კაკაოს კარაქი</a></li>
+            </ul>
+          </div>
+
+          <div class="mb-4">
+            <span class="text-xs font-bold text-gray-500 mb-2">გვერდები</span>
+            <ul>
+                <li class="mb-2"><a href="pages/delivery_terms.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">მიწოდების პირობები</a></li>
             </ul>
           </div>
       </nav>
@@ -160,8 +173,8 @@
   </div>
 
   <div class="flex items-center gap-1 bg-gray-50 p-0.5 rounded-md border border-gray-200">
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../ka/index.html">ქართ</a>
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../en/index.html">ENG</a>
+    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="index.html">ქართ</a>
+    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="index.html">ENG</a>
   </div>
 
 
@@ -179,7 +192,9 @@
     <!-- Categories Dropdown -->
       <div class="menu-parent relative w-full md:w-auto">
         <div class="w-full md:w-auto flex items-center justify-between md:justify-start px-4 py-2 text-lg font-medium text-gray-700 bg-transparent rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#6b8e6b] transition-all cursor-pointer select-none" tabindex="0">
-          <span class="flex items-center gap-2"><span>🛒</span> კატეგორიები</span>
+          <a href="categories.html" class="flex items-center gap-2 hover:text-[#6b8e6b] transition-all">
+            <span>🛒</span> კატეგორიები
+          </a>
           <svg class="ml-2 h-4 w-4 md:block" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
@@ -195,7 +210,9 @@
     <!-- Brands Dropdown -->
       <div class="menu-parent relative w-full md:w-auto">
         <div class="w-full md:w-auto flex items-center justify-between md:justify-start px-4 py-2 text-lg font-medium text-gray-700 bg-transparent rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#6b8e6b] transition-all cursor-pointer select-none" tabindex="0">
-          <span class="flex items-center gap-2"><span>✨</span> ბრენდები</span>
+          <a href="brands.html" class="flex items-center gap-2 hover:text-[#6b8e6b] transition-all">
+            <span>✨</span> ბრენდები
+          </a>
           <svg class="ml-2 h-4 w-4 md:block" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
@@ -206,9 +223,30 @@
       </div>
 
     <!-- Ingredients Dropdown -->
+      <div class="menu-parent relative w-full md:w-auto">
+        <div class="w-full md:w-auto flex items-center justify-between md:justify-start px-4 py-2 text-lg font-medium text-gray-700 bg-transparent rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#6b8e6b] transition-all cursor-pointer select-none" tabindex="0">
+          <a href="ingredients.html" class="flex items-center gap-2 hover:text-[#6b8e6b] transition-all">
+            <span>✨</span> ინგრედიენტები
+          </a>
+          <svg class="ml-2 h-4 w-4 md:block" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
+        </div>
+        <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
+            <a href="ingredients/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>კაკაოს კარაქი</span>
+            </a>
+        </div>
+      </div>
 
 
     <!-- Pages List -->
+      <div class="w-full md:w-auto flex flex-row gap-2">
+          <a href="pages/delivery_terms.html" class="flex items-center py-2 px-4 text-lg font-medium text-gray-700 bg-transparent rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#6b8e6b] transition-all">
+              <svg class="w-5 h-5 mr-2 text-red-500" fill="currentColor" viewbox="0 0 24 24">
+                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5z"></path>
+              </svg>
+            მიწოდების პირობები
+          </a>
+      </div>
 
   </div>
 </div>
@@ -220,6 +258,61 @@
   <section class="mb-20" id="category-1">
     <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
       ჰიდროფილური ზეთები &amp; ბალმები
+    </h2>
+    <div>
+      <!-- BEGIN app/views/main/_product.html.erb
+-->
+<div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
+  <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
+    <span class="text-xs text-gray-400 select-all bg-white/80 px-2 py-0.5 rounded" title="ID продукта для поддержки">[ 000002 ]</span>
+  </div>
+  <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
+    <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
+        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="2" src="images/Product_2_0_cb079ddb3bb2cade0f047abdc3039f39.png">
+
+    </div>
+
+    <div class="flex flex-col flex-grow w-full justify-between">
+
+      <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
+        <a class="hover:underline text-[#6b8e6b]" href="products/2.html">ROUND LAB 1025 Dokdo Lotion</a>
+      </h2>
+
+        <div class="mb-2 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Brand:</span>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
+        </div>
+
+
+
+        <div class="mb-1 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Description:</span>
+        </div>
+        <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
+          <ul>
+<li>ინტენსიურად ატენიანებს კანს,<br>უმოკლეს დროში უმკლავდება<br>სიმშრალეს და აქერცვლას</li>
+<li>აძლიერებს კანის ბუნებრივ დამცავ<br>ბარიერს, ხელს უშლის ტენის<br>დაკარგვას და იცავს ნეგატიური<br>ზემოქმედებისგან</li>
+<li>ამშვიდებს კანს, ამცირებს<br>გაღიზიანებას და სიწითლეს</li>
+<li>აქვს მსუბუქი ტექსტურა, რომელიც<br>სწრაფად შეიწოვება წებოვნების ან<br>ცხიმიანობის შეგრძნების გარეშე</li>
+<li>მოუხდება ყველა ტიპის კანს, მათ<br>შორის მგრძნობიარესაც</li>
+</ul>
+<div><br></div>
+<div>მთავარი აქტიური ინგრედიენტები:</div>
+<div>ღრმა ზღვის წყალი, 3 სახის<br>ჰიალურონის მჟავის კომპლექსი,<br>მაკადამიის ზეთი, პანთენოლი, შაქრის<br>ლერწმის ექსტრაქტი, სკვალანი</div>
+        </div>
+
+    </div>
+  </div>
+
+</div>
+
+<!-- END app/views/main/_product.html.erb -->
+    </div>
+  </section>
+  
+  <section class="mb-20" id="category-2">
+    <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
+      მზისგან დამცავები
     </h2>
     <div>
       <!-- BEGIN app/views/main/_product.html.erb
@@ -293,53 +386,6 @@
               </div>
           </div>
         </div>
-    </div>
-  </div>
-
-</div>
-
-<!-- END app/views/main/_product.html.erb -->
-      <!-- BEGIN app/views/main/_product.html.erb
--->
-<div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
-  <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
-    <span class="text-xs text-gray-400 select-all bg-white/80 px-2 py-0.5 rounded" title="ID продукта для поддержки">[ 000002 ]</span>
-  </div>
-  <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
-    <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
-        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="2" src="images/Product_2_0_cb079ddb3bb2cade0f047abdc3039f39.png">
-
-    </div>
-
-    <div class="flex flex-col flex-grow w-full justify-between">
-
-      <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
-        <a class="hover:underline text-[#6b8e6b]" href="products/2.html">ROUND LAB 1025 Dokdo Lotion</a>
-      </h2>
-
-        <div class="mb-2 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Brand:</span>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
-        </div>
-
-
-
-        <div class="mb-1 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Description:</span>
-        </div>
-        <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
-          <ul>
-<li>ინტენსიურად ატენიანებს კანს,<br>უმოკლეს დროში უმკლავდება<br>სიმშრალეს და აქერცვლას</li>
-<li>აძლიერებს კანის ბუნებრივ დამცავ<br>ბარიერს, ხელს უშლის ტენის<br>დაკარგვას და იცავს ნეგატიური<br>ზემოქმედებისგან</li>
-<li>ამშვიდებს კანს, ამცირებს<br>გაღიზიანებას და სიწითლეს</li>
-<li>აქვს მსუბუქი ტექსტურა, რომელიც<br>სწრაფად შეიწოვება წებოვნების ან<br>ცხიმიანობის შეგრძნების გარეშე</li>
-<li>მოუხდება ყველა ტიპის კანს, მათ<br>შორის მგრძნობიარესაც</li>
-</ul>
-<div><br></div>
-<div>მთავარი აქტიური ინგრედიენტები:</div>
-<div>ღრმა ზღვის წყალი, 3 სახის<br>ჰიალურონის მჟავის კომპლექსი,<br>მაკადამიის ზეთი, პანთენოლი, შაქრის<br>ლერწმის ექსტრაქტი, სკვალანი</div>
-        </div>
-
     </div>
   </div>
 
